kubernetes/apps/falco/falco/networkpolicys/falco-falco-allow-eg-to-k8s-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco-falco-allow-eg-to-k8s-api
  namespace: falco
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falco
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
