kubernetes/apps/falco/falco/networkpolicys/falcon-falco-allow-eg-to-k8s-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falcon-falcon-allow-eg-to-k8s-api
  namespace: falcon
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falcon
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
